--- a/AnimalShelter-SPA/src/app/home/home.component.html
+++ b/AnimalShelter-SPA/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <body class="fullscreen">
   <div class="container mt-5">
-    <h1 class="text-center">Welcome</h1>
+    <h1 class="text-center">Website Name</h1>
       <div style="text-align: left">
         <div class="text-center">
           <button class="btn btn-primary btn-lg mr-1" [routerLink]="['/animals']"><i class="fa fa-paw"> Adopt</i></button>
