--- a/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
+++ b/AnimalShelter-SPA/src/app/your-animals/your-animals.component.html
@@ -24,7 +24,9 @@
                 <div class="col-md-6">
                     <img class="card-img-top img-thumbnail" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
                     <div class="view-bar">
-                      <i class="fa fa-eye mr-3"> {{animal.views}}</i><i class="fa fa-heart mr-3"> {{animal.saves}}</i> <i class="fa fa-comment-o"> {{animal.inquiries}}</i>
+                      <!-- <i class="fa fa-eye mr-3"> {{animal.views}}</i> -->
+                      <i class="fa fa-heart mr-3"> {{animal.saves}}</i>
+                      <!-- <i class="fa fa-comment-o"> {{animal.inquiries}}</i> -->
                     </div>
                   </div>
                 <div class="col-md-6" style="margin-top: 1rem">
