--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -19,7 +19,9 @@
     </div>
     <div id="viewBar">
       <i class="fa fa-hourglass" id="timeLeft"> {{timeLeft}} days</i>
-      <i class="fa fa-eye mr-3"> {{animal.views}}</i><i class="fa fa-heart mr-3"> {{animal.saves}}</i> <i class="fa fa-comment-o"> {{animal.inquiries}}</i>
+      <!-- <i class="fa fa-eye mr-3"> {{animal.views}}</i> -->
+      <i class="fa fa-heart mr-3"> {{animal.saves}}</i>
+      <!-- <i class="fa fa-comment-o"> {{animal.inquiries}}</i> -->
     </div>
   </div>
 </div>
