--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -89,19 +89,19 @@
             <tab heading="Edit Tags">
               <h4 class="mt-3">Likes</h4>
               <div class="row">
-                <div class="col-md-4" *ngFor="let like of likes">
+                <div class="col-sm-4" *ngFor="let like of likes">
                   <input type="checkbox" [(ngModel)]="this.animalLikes[like]" (click)="addOrRemoveTag(like,'like')"> {{like}}
                 </div>
               </div>
               <h4 class="mt-3">Qualities</h4>
               <div class="row">
-                <div class="col-md-4" *ngFor="let quality of qualities">
+                <div class="col-sm-4" *ngFor="let quality of qualities">
                   <input type="checkbox" [(ngModel)]="this.animalQualities[quality]" (click)="addOrRemoveTag(quality,'quality')"> {{quality}}
                 </div>
               </div>
               <h4 class="mt-3">Good With</h4>
               <div class="row">
-                <div class="col-md-4" *ngFor="let goodWith of goodWith">
+                <div class="col-sm-4" *ngFor="let goodWith of goodWith">
                   <input type="checkbox" [(ngModel)]="this.animalGoodWith[goodWith]" (click)="addOrRemoveTag(goodWith,'goodWith')"> {{goodWith}}
                 </div>
               </div>
