--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-sm-8">
       <div *ngIf="isDifferent()" class="alert alert-info alert-warning">
-        <strong>Information:</strong> You have made changes. Any unsaved changes will be lost!
+        <strong>Warning:</strong> You have made changes. Any unsaved changes will be lost!
       </div>
     </div>
   </div>
