--- a/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
@@ -40,7 +40,7 @@
     <button type="button" class="btn btn-info" (click)="resetFilters()" style="margin-left:10px">Reset</button>
     <div class="col">
       <div class="dropdown" dropdown>
-        <a class="btn btn-secondary dropdown-toggle" dropdownToggle>
+        <a class="btn btn-warning dropdown-toggle" dropdownToggle>
           Sort By
         </a>
         <div class="dropdown-menu" *dropdownMenu>
