--- a/AnimalShelter-SPA/src/app/login/login.component.html
+++ b/AnimalShelter-SPA/src/app/login/login.component.html
@@ -11,8 +11,8 @@
         </div>
       
         <div class="form-group text-center">
-          <button class="btn btn-success" type="submit">Login</button>
-          <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
+          <button class="btn btn-success mr-1" type="submit">Login</button>
+          <button class="btn btn-danger ml-1" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
       </form>
     </div>
