--- a/AnimalShelter-SPA/src/app/register/register.component.html
+++ b/AnimalShelter-SPA/src/app/register/register.component.html
@@ -75,8 +75,8 @@
         </div>
       
         <div class="form-group text-center">
-          <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Register</button>
-          <button class="btn btn-default" type="button" [routerLink]="['/home']">Cancel</button>
+          <button class="btn btn-success mr-1" [disabled]="!registerForm.valid" type="submit">Register</button>
+          <button class="btn btn-danger ml-1" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
         
       </form>
