--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -91,8 +91,8 @@
           </div>
         </div>
         <div class="form-group text-center">
-          <button [disabled]="!animalRegisterForm.valid" class="btn btn-success mt-3" type="submit">Register</button>
-          <button class="btn btn-default mt-3" type="button" [routerLink]="['/home']">Cancel</button>
+          <button [disabled]="!animalRegisterForm.valid" class="btn btn-success mr-1 mt-3" type="submit">Register</button>
+          <button class="btn btn-danger ml-1 mt-3" type="button" [routerLink]="['/home']">Cancel</button>
         </div>
         
       </form>
