--- a/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-card/animal-card.component.html
@@ -6,7 +6,7 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" 
         [routerLink]="['/animals/', animal.id]"><i class="fa fa-paw"></i></button></li>
-      <li class="list-inline-item"><button *ngIf="!animal.adopted" class="btn btn-primary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button></li>
+      <li class="list-inline-item"><button *ngIf="!animal.adopted" class="btn btn-secondary" (click)="saveAnimal(animal.id)"><i class="fa fa-heart"></i></button></li>
     </ul>
   </div>
   <div class="card-body p-1">
