--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
@@ -73,7 +73,8 @@ img {
 
 .speech-bubble {
 	position: relative;
-	background: #d8d5d6;
+    background: #6cc3d5;
+    color: white;
     border-radius: .4em;
     max-width: 50%;
     padding: 5px;
@@ -89,7 +90,7 @@ img {
 	width: 0;
 	height: 0;
 	border: 5px solid transparent;
-	border-left-color: #d8d5d6;
+	border-left-color: #6cc3d5;
 	border-right: 0;
 	margin-top: -5px;
 	margin-right: -5px;
@@ -103,7 +104,7 @@ img {
 	width: 0;
 	height: 0;
 	border: 5px solid transparent;
-	border-right-color: #d8d5d6;
+	border-right-color: #6cc3d5;
 	border-left: 0;
 	margin-top: -5px;
 	margin-left: -5px;
