--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
@@ -68,7 +68,7 @@
         required
         class="form-control input-sm"
         placeholder="Send a private message">
-        <button class="btn btn-primary ml-2" [disabled]="!messageForm.valid">Send</button>
+        <button class="btn btn-success ml-2" [disabled]="!messageForm.valid">Send</button>
       </div>
     </form>
   </div>
