--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
         </button>
       </div>
       <div class="col-1">
-        <a *ngIf="!mobile" class="navbar-brand" [routerLink]="['/home']">Website Name</a>
+        <a *ngIf="!mobile" class="navbar-brand" [routerLink]="['/home']">PetNet</a>
       </div>
       <div class="col" *ngIf="!mobile">
         <ul class="navbar-nav mr-auto">
