--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.css
@@ -71,9 +71,20 @@ img {
 
 }
 
-.speech-bubble {
+.speech-bubble-right {
 	position: relative;
     background: #6cc3d5;
+    color: white;
+    border-radius: .4em;
+    max-width: 50%;
+    padding: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.speech-bubble-left {
+    position: relative;
+    background: #F3969A;
     color: white;
     border-radius: .4em;
     max-width: 50%;
@@ -104,7 +115,7 @@ img {
 	width: 0;
 	height: 0;
 	border: 5px solid transparent;
-	border-right-color: #6cc3d5;
+	border-right-color: #F3969A;
 	border-left: 0;
 	margin-top: -5px;
 	margin-left: -5px;
