--- a/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-list/animal-list/animal-list.component.html
@@ -6,19 +6,34 @@
 
 <div class="container mt-3">
   <form class="form-inline" #form="ngForm" (ngSubmit)="loadAnimals()" novalidate>
-    <div class="form-group">
-      <label for="minAge">Age From</label>
-      <input type="number" class="form-control ml-1" style="width: 70px" id="minAge" 
-        [(ngModel)]="animalParams.minAge" name="minAge">
+    <div class="form-group form-age">
+      <div class="row">
+        <div class="col-4">
+          <label for="minAge">Age:</label>
+        </div>
+        <div class="col-8">
+          <input type="number" class="form-control ml-1" style="width: 70px" id="minAge" 
+          [(ngModel)]="animalParams.minAge" name="minAge">
+        </div>
+        
+      </div>
     </div>
   
-    <div class="form-group px-2">
-      <label for="maxAge">To</label>
-      <input type="number" class="form-control ml-1" style="width: 70px" id="maxAge" 
-         [(ngModel)]="animalParams.maxAge" name="maxAge">
+    <div class="form-group form-age px-2">
+      <div class="row">
+        <div class="col-4">
+          <label for="maxAge">To</label>
+        </div>
+        <div class="col-8">
+          <input type="number" class="form-control ml-1" style="width: 70px" id="maxAge" 
+          [(ngModel)]="animalParams.maxAge" name="maxAge">
+        </div>
+      </div>
+      
+      
     </div>
   
-    <div class="form-group px-2">
+    <div class="form-group px-2 form-gender">
       <label for="gender">Gender: </label>
       <select class="form-control ml-1" style="width: 130px" id="gender" 
         [(ngModel)]="animalParams.gender" name="gender">
@@ -27,7 +42,7 @@
         </option>
       </select>
     </div>
-    <div class="form-group px-2">
+    <div class="form-group px-2 form-type">
       <label for="gender">Pet Type: </label>
       <select class="form-control ml-1" style="width: 130px" id="species" 
           [(ngModel)]="animalParams.species" name="species">
@@ -43,7 +58,7 @@
         <a class="btn btn-warning dropdown-toggle" dropdownToggle>
           Sort By
         </a>
-        <div class="dropdown-menu" *dropdownMenu>
+        <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
           <a class="dropdown-item" name="orderBy" [(ngModel)]="animalParams.orderBy" (click)="loadAnimals()" btnRadio="AdoptBy">Time Left To Adopt</a>
           <a class="dropdown-item" name="orderBy" [(ngModel)]="animalParams.orderBy" (click)="loadAnimals()" btnRadio="Saves">Least to Most Saves</a>
         </div>
