message thread template loads without recipient data, change warning goes away after animal edit, removed map

--- a/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-detail/animal-detail.component.html
@@ -71,9 +71,9 @@
           <tab heading="Photos">
             <ngx-gallery style="display: inline-block; margin-bottom:20px;" [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery> 
           </tab>
-          <tab heading="Location">
+          <!-- <tab heading="Location">
             <p>Map will go here</p>
-          </tab>
+          </tab> -->
         </tabset>
       </div>
     </div>
