--- a/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
+++ b/AnimalShelter-SPA/src/app/message-thread/message-thread.component.html
@@ -1,10 +1,10 @@
 <div class="row" [ngClass]="{'row-large': !mobile}">
   <div class="col-3">
-    <img style="height: 60px; width: 60px; margin: 0;" class="rounded-circle" src="{{recipient.profilePictureUrl || '../../../assets/user.png'}}"> 
+    <img style="height: 60px; width: 60px; margin: 0;" class="rounded-circle" src="{{recipient?.profilePictureUrl || '../../../assets/user.png'}}"> 
   </div>
   <div class="col-9">
-    <h4>{{recipient.knownAs}}</h4>
-    <small>Last Active: {{recipient.lastActive | timeago}}</small>
+    <h4>{{recipient?.knownAs}}</h4>
+    <small>Last Active: {{recipient ? (recipient?.lastActive | timeago) : null}}</small>
   </div>
 </div>
 
