added background to home page

--- a/AnimalShelter-SPA/src/app/home/home.component.css
+++ b/AnimalShelter-SPA/src/app/home/home.component.css
@@ -1,12 +1,18 @@
-/* .fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-  } */
+.fullscreen {
+    height: 100vh;
+  }
 
-/* h1 {
-    margin-top: 10%;
-} */
+h1 {
+    padding: 30px;
+}
+
+.col {
+  text-align: center;
+}
+
+body {
+  background-image: url(../../assets/background.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-position-y: -20px;
+}
