Added demo gifs to folder

--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -62,16 +62,17 @@
                         <input class="mr-3" type="radio" value="female" formControlName="gender">Female
                       </label>
                     </div>
-                    <h6 class="mt-2">Age</h6>
+                    <h6 class="mt-2">Age (Years)</h6>
                       <div class="form-group">
                         <input type="text"
                         class="form-control" formControlName="ageYears" placeholder="Years">
                       </div>
+                      <h6 class="mt-2">Age (Months)</h6>
                       <div class="form-group">
                         <input type="text"
                         class="form-control" formControlName="ageMonths" placeholder="Months">
                       </div>
-                      <h6>Adoption Fee</h6>
+                      <h6>Adoption Fee ($)</h6>
                       <div class="form-group">
                         <input type="text"
                         class="form-control" formControlName="adoptionFee" placeholder="Adoption Fee">
