--- a/AnimalShelter-SPA/src/app/home/home.component.html
+++ b/AnimalShelter-SPA/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="text-center" style="margin-bottom: 5%">PetNet</h1>
-    <div class="row">
+    <div class="row" style="margin-top: 20%;">
       <div class="col">
         <button class="btn btn-success btn-lg mr-2" [routerLink]="['/animals']"><i class="fa fa-paw"> Adopt</i></button>
       </div>
