--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -63,7 +63,7 @@
                 <img src="{{photoUrl || '../../assets/user.png'}}" alt="">
               </span>
             </div>
-            <div>
+            <div style="display: flex">
             <a class="dropdown-toggle text-light" dropdownToggle>
               <div *ngIf="!mobile">Welcome {{authService.decodedToken?.unique_name | titlecase}}</div>
             </a>
@@ -78,7 +78,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['/saved-animals']"><i class="fa fa-heart mr-1"></i>Saved Pets</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-envelope mr-1"></i>Messages ({{messages}})</a>
+            <a class="dropdown-item" [routerLink]="['/messages']"><i class="fa fa-envelope mr-1"></i>Messages</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out mr-1"></i>Logout</a>
           </div>
