--- a/AnimalShelter-SPA/src/app/rehome/rehome.component.html
+++ b/AnimalShelter-SPA/src/app/rehome/rehome.component.html
@@ -58,7 +58,7 @@
           <input class="form-control" type="text" placeholder="months" formControlName="ageMonths">
         </div>
         <div class="form-group">
-          <label class="control-label" style="margin-right:10px">Adoption Fee: </label>
+          <label class="control-label" style="margin-right:10px">Adoption Fee ($): </label>
           <input class="form-control" type="text" placeholder="Adoption Fee" formControlName="adoptionFee">
         </div>
         <div class="form-group">
